--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body{
 .container{
     margin:12%;
     width: 90%;
-    max-width: 700px;
+    max-width: 500px;
 }
 
 .display{
@@ -61,4 +61,10 @@ body{
     padding: 16px 26px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.display input{
+    outline: 0;
+    border: 0; 
+    font-size: 24px;
 }
